--- a/generic.css
+++ b/generic.css
@@ -44,6 +44,7 @@ input {
 
 }
 
-a { 
-  text-decoration: none;
-} 
+a, a:hover, a:focus, a:active {
+      text-decoration: none;
+      color: inherit;
+}
