--- a/apportionment/style.css
+++ b/apportionment/style.css
@@ -1,3 +1,4 @@
+/*
 table {
   position: absolute;
   right: 5px;
@@ -9,6 +10,7 @@ table {
   border: 1px solid #ffffff;
   border-spacing: 10px 0;
 }
+*/
 
 td {
   text-align: center;
