--- a/generic.css
+++ b/generic.css
@@ -59,3 +59,11 @@ a, a:hover, a:focus, a:active {
       text-decoration: none;
       color: inherit;
 }
+
+.hyperlink {
+      .color: #51e191;
+}
+
+.hyperlink:hover {
+      .color: #256643;
+}
