--- a/generic.css
+++ b/generic.css
@@ -8,11 +8,24 @@ body {
 
 @font-face {
 	font-family: 'montserrat';
-	src: 
+	src:
 		local('Montserrat'),
 		local('Montserrat-Regular'),
 		url('fonts/montserrat/Montserrat-Regular.otf');
-		format('opentype');  
+		format('opentype');
+}
+
+@font-face {
+    font-family: 'argam';
+    src: url('fonts/vincifirenzeargam/VinciFirenzeArgam.eot');
+    src: url('fonts/vincifirenzeargam/VinciFirenzeArgam.eot?#iefix') format('embedded-opentype'),
+        url('fonts/vincifirenzeargam/VinciFirenzeArgam.woff2') format('woff2'),
+        url('fonts/vincifirenzeargam/VinciFirenzeArgam.woff') format('woff'),
+        url('fonts/vincifirenzeargam/VinciFirenzeArgam.ttf') format('truetype'),
+        url('fonts/vincifirenzeargam/VinciFirenzeArgam.svg#VinciFirenzeArgam') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 
 
