--- a/generic.css
+++ b/generic.css
@@ -72,9 +72,50 @@ a, a:hover, a:focus, a:active {
 }
 
 .hyperlink {
-      color: #51e191;
+      color: #51e194;
 }
 
 .hyperlink:hover {
       color: #256643;
+}
+
+/* When you can't be bothered to properly setup a slider so you fiddle with
+   the first thing you find on w3schools until it looks right
+   lol*/
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1;
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #51e194;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #51e194;
+  cursor: pointer;
 }
