--- a/docs/css/cgt.css
+++ b/docs/css/cgt.css
@@ -1,1 +1,1 @@
-a{color:#51e194}a:hover{color:#256643}.lazuli{color:#345ec3}.ruby{color:#d24d61}#content{width:66%;margin:auto;line-height:150%}
+a{color:#51e194}a:hover{color:#256643}.lazuli{color:#345ec3}.ruby{color:#d24d61}#content{width:66%;margin:auto;line-height:150%}.boxsection{display:table;margin:0 auto}.boxfigure{width:25% vertical-align :middle;display:table-cell;margin:0 auto;text-align:center}figure{width:100% display:inline-block;margin:1%;margin-left:1.5%}.spoiler{filter:blur(6px)}.spoiler:hover{filter:none}
