--- a/css/cgt.css
+++ b/css/cgt.css
@@ -20,3 +20,31 @@ a:hover {
     margin: auto;
     line-height: 150%;
 }
+
+.boxsection {
+  display: table;
+  margin: 0 auto;
+}
+
+.boxfigure {
+  width: 25%
+  vertical-align : middle;
+  display: table-cell;
+  margin: 0 auto;
+  text-align: center;
+}
+
+figure {
+    width: 100%
+    display:inline-block;
+    margin:1%;
+    margin-left:1.5%;
+}
+
+.spoiler {
+    filter: blur(6px);
+}
+
+.spoiler:hover {
+    filter: none;
+}
