added cgt part 4 and fixed markdown formatting

--- a/templates/default.html
+++ b/templates/default.html
@@ -34,7 +34,7 @@
 		</h1>
 		<div id=content>
 			$if(katex)$
-				$$$$\gdef\game#1#2{\{#1 \mid #2\}}$$$$
+				$$$$\gdef\game#1#2{\left\{#1 \,\middle\vert\, #2\right\}}$$$$
 			$endif$
             $body$
         </div>
