--- a/css/argam.css
+++ b/css/argam.css
@@ -11,7 +11,7 @@
 
 .button {
     text-align: center;
-    font-size: 50;
+    font-size: 50px;
     border: 1px solid white;
     cursor: pointer
 }
