updated argam fonts

--- a/css/argam.css
+++ b/css/argam.css
@@ -6,7 +6,7 @@
 }
 
 .argam-large {
-    font-family: 'argam'; /* will be replaced with monospaced if i receieve it */
+    font-family: 'argam-large';
 }
 
 .button {
