--- a/docs/css/argam.css
+++ b/docs/css/argam.css
@@ -1,1 +1,1 @@
-.error{color:#ff0000}.argam{font-family:'argam'}.argam-large{font-family:'argam'}.button{text-align:center;font-size:50px;border:1px solid white;cursor:pointer}
+.error{color:#ff0000}.argam{font-family:'argam'}.argam-large{font-family:'argam-large'}.button{text-align:center;font-size:50px;border:1px solid white;cursor:pointer}
